tests/output/self_hosted/indent_increase_error.txt
tests/indent_increase_error.oomph:3: error: indent without ':' at end of previous line

            print("wat")
    ^^^^^^^^

assert() failed in "self_hosted/error.oomph", line N
